--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ li {
     font-size: 3em;
     text-align: center;
 }
+.my-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
 
 .my-item {
     width: 200px;
